--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -24,15 +24,15 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="70dp"
                 android:text="@string/route_pref_title"
-                android:textColor="@android:color/primary_text_light"
-                android:textSize="16sp" />
+                android:textSize="16sp"
+                android:textStyle="bold"/>
 
             <TextView
                 android:id="@+id/txt_selected_route_text"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/route_selected_default"
-                android:textSize="14sp"
+                android:textSize="18sp"
                 android:layout_marginStart="70dp"/>
 
             <androidx.fragment.app.FragmentContainerView
@@ -50,14 +50,14 @@
 
             <Button
                 android:id="@+id/btn_about"
-                android:layout_width="320dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="70dp"
                 android:text="@string/btn_about_title" />
 
             <Button
                 android:id="@+id/btn_legal"
-                android:layout_width="320dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="70dp"
                 android:text="@string/btn_legal_title" />
